--- a/project.yml
+++ b/project.yml
@@ -1,12 +1,46 @@
 settings:
-  name: "Product Name"
+  name: StorageGRID
+  platform: cloud
   internal:
     pdf_enabled: true
   prod:
     pdf_enabled: true
-    harmony_enabled: true
-
-sidebar: 
+    harmony_enabled: true 
+sidebar:
   entries:
-  - title: Legal notices
-    url: /legal-notices.html
+    - title: StorageGRID docs
+      url: /index.html
+    - title: Release notes
+      entries:
+        - title: What's new 
+          url: /whats-new.html
+        - title: Known issues
+          url: /reference-known-issues.html
+    - title: Get started
+      entries:
+        - title: Discover StorageGRID systems
+          url: /task-discover-storagegrid.html
+    - title: Manage StorageGRID systems
+      entries:
+        - title: View your StorageGRID systems
+          url: /task-view-storagegrid.html
+        - title: View and update StorageGRID certificates
+          url: /task-manage-certificates.html
+        - title: Administer StorageGRID using the advanced view
+          url: task-administer-storagegrid.html
+        - title: Use NetApp data services with StorageGRID
+          url: /task-enable-data-services.html
+        - title: Remove a system
+          url: /task-remove-storagegrid.html
+    - title: Knowledge and support
+      entries:
+        - title: Register for support
+          url: /task-support-registration.html
+        - title: Get help
+          url: /task-get-help.html
+    - title: Legal notices
+      url: /legal-notices.html
+product-family:
+  name: Storage Management
+  repo: storage-management-family
+
