bluexpdoc-996 release notes automation

--- a/project.yml
+++ b/project.yml
@@ -6,6 +6,8 @@ settings:
   prod:
     pdf_enabled: true
     harmony_enabled: true 
+     release_notes_autogen:
+      release_notes_repo: console-relnotes
 sidebar:
   entries:
     - title: StorageGRID docs
