bluexp-996-rns-auto

--- a/project.yml
+++ b/project.yml
@@ -1,6 +1,7 @@
 settings:
   name: StorageGRID
-  platform: cloud
+  release_notes_autogen:
+      release_notes_repo: console-relnotes
   internal:
     pdf_enabled: true
   prod:
